Overflow of text on small screens for the actions now fixed with responsive text-size change

--- a/src/domain/campaigns/campaign_details/CampaignDetails.module.scss
+++ b/src/domain/campaigns/campaign_details/CampaignDetails.module.scss
@@ -176,6 +176,9 @@
       }
       & h4 {
         margin-block-end: 0em;
+        @media (max-width: 500px) {
+          font-size: 15px;
+        }
       }
       .actionIconContainer {
         width: 80px;
@@ -184,11 +187,6 @@
           margin-right: 20px;
           height: 70px;
         }
-        .actionTitle {
-          @media (max-width: 500px) {
-            font-size: 15px;
-          }
-        }    
       }
     }
     .actionFooter {
